--- a/pages/bio.html
+++ b/pages/bio.html
@@ -32,7 +32,9 @@
         <div class="flexslider">
           <ul class="slides">
             {% for image in cms.bio.risd_roots %}
-                <li><img src="{{image|imageSize(800)}}"></li>
+                <li><img src="{{image|imageSize(800)}}">
+                    <p class="caption">{{image.caption}}</p>
+                </li>
             {% endfor %}
           </ul>
         </div>
@@ -40,7 +42,9 @@
         <div class="flexslider">
           <ul class="slides">
             {% for image in cms.bio.work %}
-                <li><img src="{{image|imageSize(800)}}"></li>
+                <li><img src="{{image|imageSize(800)}}"><br>
+                    <p class="caption">{{image.caption}}</p>
+                </li>
             {% endfor %}
           </ul>
         </div>
