--- a/pages/bio.html
+++ b/pages/bio.html
@@ -10,7 +10,7 @@
 {# http://www.webhook.com/docs/template-inheritance-blocks/ #}
 {% extends "templates/partials/base.html" %}
 {# This sets our page <title>. It will append this bio's name to the site title defined in base.html #}
-{% block title %}{% parent %} - {{ cms.bio.name }}{% endblock %}
+{% block title %}{% parent %} - {{ cms.bio.page_title_prefix }} {{ cms.bio.name }}{% endblock %}
 {% block content %}
 {% include "templates/partials/nav.html" %}
 {% include "templates/partials/side-nav.html" %}
@@ -25,7 +25,7 @@
   <section id="bio">
     <div class="container">
       <div class="three columns">
-        <h2>{{cms.bio.name}}</h2>
+        <h2>{{ cms.bio.page_title_prefix }} {{cms.bio.name}}</h2>
       </div>
       <div class="eight columns">
         {{cms.bio.long_bio|safe}}
