--- a/pages/bio.html
+++ b/pages/bio.html
@@ -1,71 +1,57 @@
-{# ------------------------------------------------------- #}
-{# ONE OFF VIEW bio #}
-{# This page can use any data from http:localhost:2000/cms/#/form/bio/ #}
-{# Webhook uses the SWIG.js (like Djagno/Twig) templating system. Their documentation is here: #}
-{# http://paularmstrong.github.io/swig/docs/tags/ #}
-{# Learn about calling data into Webhook pages here: #}
-{# http://www.webhook.com/docs/template-rules-and-filters/ #}
-{# ------------------------------------------------------- #}
-{# Confused what extends and blocks do? Watch a primer: #}
-{# http://www.webhook.com/docs/template-inheritance-blocks/ #}
 {% extends "templates/partials/base.html" %}
-{# This sets our page <title>. It will append this bio's name to the site title defined in base.html #}
-{% block title %}{% parent %} - {{ cms.bio.page_title_prefix }} {{ cms.bio.name }}{% endblock %}
+
+{% block title %}{% parent %}
+-
+{{ cms.bio.page_title_prefix }}
+{{ cms.bio.name }}{% endblock %}
 {% block content %}
 {% include "templates/partials/header.html" %}
 
-  <section class="image-break {{cms.imagebreaks.image_breaks[3].id}}" id="search-process" style="background-image:url('{{cms.imagebreaks.image_breaks[3].image|imageSize(1500)}}');">
-    <div class="container">
-      <header class="six columns">
-        <h1>president's bio</h1>
-      </header>
-    </div>
-  </section>
-
-  <section id="bio">
-    <div class="container">
-      <div class="three columns">
-        <h2>{{ cms.bio.page_title_prefix }} {{cms.bio.name}}</h2>
-      </div>
-      <div class="eight columns">
+<main class="bio">
+    <section class="image-break">
+        <div class="image-container" style="background-image:url('{{cms.imagebreaks.image_breaks[3].image|imageSize(1500)}}');"></div>
+    </section>
+    <h1 class="bio-title">About Rosanne Somerson</h1>
+    <section class="bio-description narrowColumn">
         {{cms.bio.long_bio|safe}}
         <div class="flexslider">
-          <ul class="slides">
-            {% for image in cms.bio.risd_roots %}
-                <li><img src="{{image|imageSize(800)}}">
+            <ul class="slides">
+                {% for image in cms.bio.risd_roots %}
+                <li><img src="{{image|imageSize(1200)}}">
                     <p class="caption">{{image.caption}}</p>
                 </li>
-            {% endfor %}
-          </ul>
+                {% endfor %}
+            </ul>
         </div>
         {{cms.bio.deep_roots|safe}}
         <div class="flexslider">
-          <ul class="slides">
-            {% for image in cms.bio.work %}
+            <ul class="slides">
+                {% for image in cms.bio.work %}
                 <li><img src="{{image|imageSize(800)}}">
                     <p class="caption">{{image.caption}}</p>
                 </li>
-            {% endfor %}
-          </ul>
+                {% endfor %}
+            </ul>
         </div>
         {{cms.bio.studio_practice|safe}}
         <h3>Highlights from President Somerson's RISD years</h3>
         {% for row in cms.bio.timeline|sort('year')  %}
-          <div class="timeline-entry">
+        <div class="timeline-entry">
             <p class="timeline-title">
-              {{row.event|safe}}
+                {{row.event|safe}}
             </p>
 
             <p class="timeline-date">
-              {{row.year}}
+                {{row.year}}
             </p>
             {% if image %}
-              <img src="{{row.image"
+            <img </div src="{{row.image}}">
             {% endif %}
-          </div>
-        {% endfor %}
-        <h3><a href="../fact-sheet">Learn more about RISD</a></h3>
-      </div>
-    </div>
-  </section>
+            {% endfor %}
+            <h3>
+                <a href="../fact-sheet">Learn more about RISD</a>
+            </h3>
+        </div>
+    </section>
+</main>
 {% endblock %}
