--- a/pages/bio.html
+++ b/pages/bio.html
@@ -44,7 +44,7 @@
             <h2 class="biography-title">{{ cms.bio.studio_practice_title }}</h2>
             {{cms.bio.studio_practice|safe}}
         </article>
-        <article class="biography-section">
+        <article class="biography-section--timeline">
             <div class="timeline">
                 <div class="timeline-entry">
                     <h2 class="biography-title--timeline">{{ cms.bio.timeline_title }}</h2>
@@ -77,5 +77,6 @@
             <a href="../fact-sheet">Learn more about RISD</a>
         </h3>
     </section> #}
+    
 </main>
 {% endblock %}
