--- a/pages/bio.html
+++ b/pages/bio.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% block header %}
-{% set activeNavItem = 'president’s bio' %}
+{% set activeNavItem = 'President’s Bio' %}
 {% include "templates/partials/header.html" %}
 {% endblock %}
 
@@ -77,6 +77,6 @@
             <a href="../fact-sheet">Learn more about RISD</a>
         </h3>
     </section> #}
-    
+
 </main>
 {% endblock %}
